Bug 1564515 - Update alignment and spacing in about:addons list r=rpl
Differential Revision: https://phabricator.services.mozilla.com/D37732

UltraBlame original commit: 94097350615051aafb25b453962ee2937a5611ef

--- a/toolkit/mozapps/extensions/content/aboutaddons.css
+++ b/toolkit/mozapps/extensions/content/aboutaddons.css
@@ -7,6 +7,10 @@
   display: none !important;
 }
 
+body {
+  cursor: default;
+}
+
 .header-name {
   -moz-user-select: initial;
 }
@@ -28,20 +32,16 @@ message-bar-stack > * {
 }
 
 
-addon-list message-bar-stack.pending-uninstall {
-  margin-bottom: 12px;
-}
-
-
 
 .list-section-heading {
   font-size: 17px;
   font-weight: 600;
-  margin-block: 16px;
+  margin-top: 32px;
+  margin-bottom: 16px;
 }
 
 
-.list-section-heading:first-of-type {
+addon-list > section:first-of-type .list-section-heading {
   margin-top: 0;
 }
 
@@ -180,7 +180,7 @@ addon-card:not([expanded]) .addon-description {
 
 
 .recommended-heading {
-  margin-bottom: 16px;
+  margin-top: 48px;
 }
 
 
@@ -217,6 +217,7 @@ recommended-addon-card .addon-description:not(:empty) {
   flex-shrink: 0;
   flex-grow: 0;
   align-self: baseline;
+  margin-inline-end: 0;
 }
 
 .disco-cta-button[action="install-addon"]::before {
@@ -225,7 +226,7 @@ recommended-addon-card .addon-description:not(:empty) {
 }
 
 .discopane-notice {
-  margin: 0.5em 0;
+  margin: 24px 0;
 }
 
 .discopane-notice-content {
